erDiagram
  WAREHOUSES ||--o{ WAREHOUSE_RACKS : contains
  WAREHOUSES ||--o{ WAREHOUSE_LOCATIONS : contains
  WAREHOUSE_RACKS ||--o{ WAREHOUSE_LOCATIONS : groups
  WAREHOUSES ||--o{ STOCK_ITEMS : holds
  WAREHOUSE_LOCATIONS ||--o{ STOCK_LOCATION_BALANCES : holds
  STOCK_ITEMS ||--o{ STOCK_TRANSACTIONS : changed_by
  WAREHOUSES ||--o{ STOCK_TRANSACTIONS : posts
  WAREHOUSES ||--o{ STOCK_COUNTS : counted
  INVENTORY_TRANSFER_REQUESTS ||--o{ STOCK_TRANSACTIONS : posts
  PRODUCTION_ISSUE_ORDERS ||--o{ STOCK_TRANSACTIONS : posts
  GENERAL_STOCK_RECEIPTS ||--o{ STOCK_TRANSACTIONS : posts
  GENERAL_STOCK_ISSUES ||--o{ STOCK_TRANSACTIONS : posts
  SPARE_PARTS_REPLENISHMENTS ||--o{ STOCK_TRANSACTIONS : posts
  WAREHOUSE_LOCATIONS ||--o{ DEFAULT_ITEM_LOCATIONS : defaults
